@@ -1,6 +1,7 @@
 Version 6.8.5 - not yet released
 * calculations
   - update circling percentage only when flying
+  - fix circling height gain calculation
 * user interface
   - fix "kg/m^2" and "lb/ft^2" unit display
 
